Change imgs in peek.html

--- a/templates/calculator/peek.html
+++ b/templates/calculator/peek.html
@@ -17,12 +17,12 @@
                 <ul class="sub">
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="플라스틱 우유병">
-                            <img src="{% static 'img/bottle.png' %}" width="50px">플라스틱 우유병
+                            <img src="{% static 'img/milk-bottle.png' %}" width="50px">플라스틱 우유병
                         </button>
                     </li>
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="플라스틱 세제통">
-                            <img src="{% static 'img/bottle.png' %}" width="50px">플라스틱 세제통
+                            <img src="{% static 'img/cleaning-liquid.png' %}" width="50px">플라스틱 세제통
                         </button>
                     </li>
                     <li>
@@ -95,22 +95,22 @@
                     </li>
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="A4 용지">
-                            <img src="{% static 'img/paper_1.png' %}" width="50px">A4 용지
+                            <img src="{% static 'img/paper-a4.png' %}" width="50px">A4 용지
                         </button>
                     </li>
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="책">
-                            <img src="{% static 'img/paper_1.png' %}" width="50px">책
+                            <img src="{% static 'img/open-book.png' %}" width="50px">책
                         </button>
                     </li>
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="잡지">
-                            <img src="{% static 'img/paper_1.png' %}" width="50px">잡지
+                            <img src="{% static 'img/magazine.png' %}" width="50px">잡지
                         </button>
                     </li>
                     <li>
                         <button type="button" class="add_btn" onclick="addItem(this.id)" id="카탈로그">
-                            <img src="{% static 'img/paper_1.png' %}" width="50px">카탈로그
+                            <img src="{% static 'img/catalogue.png' %}" width="50px">카탈로그
                         </button>
                     </li>
                 </ul>
