--- a/mainapp/static/css/mainstyle.css
+++ b/mainapp/static/css/mainstyle.css
@@ -343,16 +343,18 @@ ul.main {
 }
 .chhome_chcon{
   display: flex;
-  width: 1500px;
-  margin: 50px;
+  width: 100%;
+  margin: 50px 0px;
 }
 .chhome_left{
   flex: 1;
   margin: 20px 20px;
+  margin-right: 0%;
+
 }
 .chhome_right{
   flex: 4;
-  padding: 0px 20px;
+  padding: 0px 0px;
 }
 .chhome_chlist{
   display: grid;
@@ -365,16 +367,26 @@ ul.main {
   border: 2px darkgreen solid;
   padding: 20px;
   height: 250px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  background-color:var(--green-1--);
+  margin: auto;
+  margin-bottom: 20px;
+}
+.chhome_mych p,.chhome_chlank p{
+  color:var(--geeen-6--);
+  font-weight: bolder;
 }
 .chhome_mych ul{
   padding: 0%;
+  margin: auto;
+  list-style-type: disc;
 }
 .chhome_mych ul li{
   text-align: center;
-
+  width: 150px;
 }
 .chhome_chlank{
   text-align: center;
@@ -382,15 +394,20 @@ ul.main {
   margin-top: 20px;
   padding: 20px;
   height: 250px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  background-color:var(--green-1--);
+  margin: 10px auto;
 }
-.chhome_chlank ul{
+.chhome_chlank ol{
+  margin: auto;
   padding: 0%;
 }
-.chhome_chlank ul li{
-  text-align: center;
+.chhome_chlank ol li{
+  /* text-align: center; */
+  width: 150px;
 }
 
 .chhome_chas{
@@ -399,15 +416,20 @@ ul.main {
   margin: 20px;
   padding: 0;
   text-align: center;
-  border: 2px darkgreen solid;
+  /* border: 2px darkgreen solid; */
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  background-color: var(--begie-2--);
 }
 .chimg{
+  margin: auto;
+  margin-top: 10px;
   flex:2;
   border-radius: 70%;
+  width: 100px;
   overflow: hidden;
+  background-color: white;
 }
 .chimg img{
   max-width: 100px;
@@ -417,16 +439,30 @@ ul.main {
   flex:2;
   text-align: center;
   padding-top: 20px;
+  
+}
+#chname{
+  font-weight: bolder;
+  color: var(--begie-5--);
+  font-size: 20px;
+}
+.join{
+  flex:1;
+  margin: auto;
 }
 .chhome_chas button{
-  flex:1;
-  background-color: rgb(178, 202, 137);
-  font-weight: bolder;
-  border-radius: 30px;
-  width: 150px;
-  height: 50px;
-  margin: auto;
+  margin: 15px auto;
+  border: none;
+  width: 110px;
+  height: 30px;
+  font-size: 14px;
+  background-color: var(--green-4--);
+  border-radius: 18px;
 } 
+.chhome_chas button:hover {
+  background-color: var(--green-5--);
+  color: white;
+}
 /* Challenge info */
 .ch_info_container {
   width: 100%;
