--- a/templates/calculator/peek.html
+++ b/templates/calculator/peek.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <div class="cal__title">
-    <h3>분리수거 계산기</h3>
-    <p>여러분의 분리수거로 남는 전력</p>
+    <p>분리수거를 할 때마다 이산화탄소 배출량을 줄일 수 있다는 사실을 알고 계셨나요?</p>
+    <p>내가 분리수거를 하며 아낀 이산화탄소 배출량을 확인해보세요!</p>
 </div>
 <div class="item__list">
     <ul class="main">
@@ -123,7 +123,7 @@
         <form action="{% url 'calculator:result' %}" method="POST">
             {% csrf_token %}
             <table class="item__table" border="0" cellspacing="0" cellpadding="0" id="items_table">
-                <thead bgcolor="#C8E3FF">
+                <thead>
                     <th scope="col">&nbsp;</th>
                     <th scope="col">이름</th>
                     <th scope="col">수량</th>
@@ -133,9 +133,6 @@
                 <tbody id='table-body'>
                 </tbody>
             </table>
-            <div class="total">
-                <h3>얼마나 지구를 아껴줬을까?</h3>
-            </div>
             <input type="submit" value="결과 확인하기">
         </form>
     </div>
