--- a/mainapp/static/css/mainstyle.css
+++ b/mainapp/static/css/mainstyle.css
@@ -204,6 +204,13 @@ p {
   border-radius: 100% 100% 0px 0px;
 }
 
+.necessarity{
+  position: relative;
+  top: 500px;
+  width: 100%;
+  height: 100%;
+}
+
 /* container */
 #container {
   display: flex;
@@ -287,6 +294,53 @@ p {
 ul.main {
   display: flex;
   flex-direction: row;
+}
+
+/* login */
+.login_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 30px auto;
+  padding: 20px 20px 20px;
+  width: 310px;
+  background: white;
+  border-radius: 3px;
+}
+
+.login_title h1 {
+  width: 100%;
+  color: #4677c5;
+  font-size: 200%;
+  font-weight: bold;
+  text-align: center;
+}
+
+.login_input_id{
+  width: 500px;   
+  margin: 20px 0 0 0;
+  height: 50px;
+}
+
+.login_input_pwd{
+  width: 500px;
+  margin: 5px 0 0 0;
+  height: 50px;
+}
+
+.login_content_submit input{
+  width: 500px;
+  height: 50px;
+  margin: 20px 0 0 0;
+  background-color: #4677c5;
+  border-left: #4677c5;
+  border-right: #4677c5;
+  border-bottom: #4677c5;
+  border-top: #4677c5;
+  color: white;
+  font-size: 100%; 
+  font-weight: bold;
 }
 
 /* Peek__items */
